Remove saving metadata against blob
